--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "automotorapp/wsgi.py",
+      "src": "/automotorapp/wsgi.py",
       "use": "@vercel/python"
     },
     {
